m6/three-vpcs.template
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Basic VPC deployment with two public subnets in two different Availability Zones",
    "Parameters": {},
    "Resources": {
        "VPC1": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "EnableDnsSupport": "true",
                "EnableDnsHostnames": "true",
                "CidrBlock": "10.0.0.0/16",
                "Tags": [
                    {
                        "Key": "Company",
                        "Value": "Globomantics"
                    },
                    {
                        "Key": "Name",
                        "Value": "globo-vpc1"
                    }
                ]
            }
        },
        "V1Pub1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC1"
                },
                "CidrBlock": "10.0.1.0/24",
                "Tags": [
                    {
                        "Key": "Company",
                        "Value": "Globomantics"
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    },
                    {
                        "Key": "Name",
                        "Value": "pub-1"
                    }
                ],
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                }
            }
        },
        "V1Pub2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC1"
                },
                "CidrBlock": "10.0.2.0/24",
                "Tags": [
                    {
                        "Key": "Company",
                        "Value": "Globomantics"
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    },
                    {
                        "Key": "Name",
                        "Value": "pub-2"
                    }
                ],
                "AvailabilityZone": {
                    "Fn::Select": [
                        "1",
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                }
            }
        },
        "V1Priv1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC1"
                },
                "CidrBlock": "10.0.3.0/24",
                "Tags": [
                    {
                        "Key": "Company",
                        "Value": "Globomantics"
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    },
                    {
                        "Key": "Name",
                        "Value": "priv-1"
                    }
                ],
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                }
            }
        },
        "V1Priv2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC1"
                },
                "CidrBlock": "10.0.4.0/24",
                "Tags": [
                    {
                        "Key": "Company",
                        "Value": "Globomantics"
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    },
                    {
                        "Key": "Name",
                        "Value": "priv-2"
                    }
                ],
                "AvailabilityZone": {
                    "Fn::Select": [
                        "1",
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                }
            }
        },
        "V1IGW": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Company",
                        "Value": "Globomantics"
                    }
                ]
            }
        },
        "V1IGWA": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC1"
                },
                "InternetGatewayId": {
                    "Ref": "V1IGW"
                }
            }
        },
        "V1PubRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC1"
                },
                "Tags": [
                    {
                        "Key": "Company",
                        "Value": "Globomantics"
                    }
                ]
            }
        },
        "V1PubRoute": {
            "Type": "AWS::EC2::Route",
            "DependsOn": "V1PubRouteTable",
            "Properties": {
                "RouteTableId": {
                    "Ref": "V1PubRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "V1IGW"
                }
            }
        },
        "V1Pub1RouteTableAssoc": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "V1Pub1"
                },
                "RouteTableId": {
                    "Ref": "V1PubRouteTable"
                }
            }
        },
        "V1Pub2RouteTableAssoc": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "V1Pub2"
                },
                "RouteTableId": {
                    "Ref": "V1PubRouteTable"
                }
            }
        },
        "V1PubNACL": {
            "Type": "AWS::EC2::NetworkAcl",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC1"
                },
                "Tags": [
                    {
                        "Key": "Company",
                        "Value": "Globomantics"
                    }
                ]
            }
        },
        "V1PubNACLEgress": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "V1PubNACL"
                },
                "RuleNumber": "100",
                "Protocol": "-1",
                "RuleAction": "allow",
                "Egress": "true",
                "CidrBlock": "0.0.0.0/0"
            }
        },
        "V1PubNACLIngress": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "V1PubNACL"
                },
                "RuleNumber": "100",
                "Protocol": "-1",
                "RuleAction": "allow",
                "Egress": "false",
                "CidrBlock": "0.0.0.0/0"
            }
        },
        "V1Pub1NACLAssoc": {
            "Type": "AWS::EC2::SubnetNetworkAclAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "V1Pub1"
                },
                "NetworkAclId": {
                    "Ref": "V1PubNACL"
                }
            }
        },
        "V1Pub2NACLAssoc": {
            "Type": "AWS::EC2::SubnetNetworkAclAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "V1Pub2"
                },
                "NetworkAclId": {
                    "Ref": "V1PubNACL"
                }
            }
        },
        "VPC2": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "EnableDnsSupport": "true",
                "EnableDnsHostnames": "true",
                "CidrBlock": "10.1.0.0/16",
                "Tags": [
                    {
                        "Key": "Company",
                        "Value": "Globomantics"
                    },
                    {
                        "Key": "Name",
                        "Value": "globo-vpc2"
                    }
                ]
            }
        },
        "V2Pub1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC2"
                },
                "CidrBlock": "10.1.1.0/24",
                "Tags": [
                    {
                        "Key": "Company",
                        "Value": "Globomantics"
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    },
                    {
                        "Key": "Name",
                        "Value": "pub-1"
                    }
                ],
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                }
            }
        },
        "V2Pub2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC2"
                },
                "CidrBlock": "10.1.2.0/24",
                "Tags": [
                    {
                        "Key": "Company",
                        "Value": "Globomantics"
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    },
                    {
                        "Key": "Name",
                        "Value": "pub-2"
                    }
                ],
                "AvailabilityZone": {
                    "Fn::Select": [
                        "1",
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                }
            }
        },
        "V2Priv1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC2"
                },
                "CidrBlock": "10.1.3.0/24",
                "Tags": [
                    {
                        "Key": "Company",
                        "Value": "Globomantics"
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    },
                    {
                        "Key": "Name",
                        "Value": "priv-1"
                    }
                ],
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                }
            }
        },
        "V2Priv2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC2"
                },
                "CidrBlock": "10.1.4.0/24",
                "Tags": [
                    {
                        "Key": "Company",
                        "Value": "Globomantics"
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    },
                    {
                        "Key": "Name",
                        "Value": "priv-2"
                    }
                ],
                "AvailabilityZone": {
                    "Fn::Select": [
                        "1",
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                }
            }
        },
        "V2IGW": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Company",
                        "Value": "Globomantics"
                    }
                ]
            }
        },
        "V2IGWA": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC2"
                },
                "InternetGatewayId": {
                    "Ref": "V2IGW"
                }
            }
        },
        "V2PubRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC2"
                },
                "Tags": [
                    {
                        "Key": "Company",
                        "Value": "Globomantics"
                    }
                ]
            }
        },
        "V2PubRoute": {
            "Type": "AWS::EC2::Route",
            "DependsOn": "V2PubRouteTable",
            "Properties": {
                "RouteTableId": {
                    "Ref": "V2PubRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "V2IGW"
                }
            }
        },
        "V2Pub1RouteTableAssoc": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "V2Pub1"
                },
                "RouteTableId": {
                    "Ref": "V2PubRouteTable"
                }
            }
        },
        "V2Pub2RouteTableAssoc": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "V2Pub2"
                },
                "RouteTableId": {
                    "Ref": "V2PubRouteTable"
                }
            }
        },
        "V2PubNACL": {
            "Type": "AWS::EC2::NetworkAcl",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC2"
                },
                "Tags": [
                    {
                        "Key": "Company",
                        "Value": "Globomantics"
                    }
                ]
            }
        },
        "V2PubNACLEgress": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "V2PubNACL"
                },
                "RuleNumber": "100",
                "Protocol": "-1",
                "RuleAction": "allow",
                "Egress": "true",
                "CidrBlock": "0.0.0.0/0"
            }
        },
        "V2PubNACLIngress": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "V2PubNACL"
                },
                "RuleNumber": "100",
                "Protocol": "-1",
                "RuleAction": "allow",
                "Egress": "false",
                "CidrBlock": "0.0.0.0/0"
            }
        },
        "V2Pub1NACLAssoc": {
            "Type": "AWS::EC2::SubnetNetworkAclAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "V2Pub1"
                },
                "NetworkAclId": {
                    "Ref": "V2PubNACL"
                }
            }
        },
        "V2Pub2NACLAssoc": {
            "Type": "AWS::EC2::SubnetNetworkAclAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "V2Pub2"
                },
                "NetworkAclId": {
                    "Ref": "V2PubNACL"
                }
            }
        },
        "VPC3": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "EnableDnsSupport": "true",
                "EnableDnsHostnames": "true",
                "CidrBlock": "10.2.0.0/16",
                "Tags": [
                    {
                        "Key": "Company",
                        "Value": "Globomantics"
                    },
                    {
                        "Key": "Name",
                        "Value": "globo-vpc3"
                    }
                ]
            }
        },
        "V3Pub1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC3"
                },
                "CidrBlock": "10.2.1.0/24",
                "Tags": [
                    {
                        "Key": "Company",
                        "Value": "Globomantics"
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    },
                    {
                        "Key": "Name",
                        "Value": "pub-1"
                    }
                ],
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                }
            }
        },
        "V3Pub2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC3"
                },
                "CidrBlock": "10.2.2.0/24",
                "Tags": [
                    {
                        "Key": "Company",
                        "Value": "Globomantics"
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    },
                    {
                        "Key": "Name",
                        "Value": "pub-2"
                    }
                ],
                "AvailabilityZone": {
                    "Fn::Select": [
                        "1",
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                }
            }
        },
        "V3Priv1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC3"
                },
                "CidrBlock": "10.2.3.0/24",
                "Tags": [
                    {
                        "Key": "Company",
                        "Value": "Globomantics"
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    },
                    {
                        "Key": "Name",
                        "Value": "priv-1"
                    }
                ],
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                }
            }
        },
        "V3Priv2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC3"
                },
                "CidrBlock": "10.2.4.0/24",
                "Tags": [
                    {
                        "Key": "Company",
                        "Value": "Globomantics"
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    },
                    {
                        "Key": "Name",
                        "Value": "priv-2"
                    }
                ],
                "AvailabilityZone": {
                    "Fn::Select": [
                        "1",
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                }
            }
        },
        "V3IGW": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Company",
                        "Value": "Globomantics"
                    }
                ]
            }
        },
        "V3IGWA": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC3"
                },
                "InternetGatewayId": {
                    "Ref": "V3IGW"
                }
            }
        },
        "V3PubRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC3"
                },
                "Tags": [
                    {
                        "Key": "Company",
                        "Value": "Globomantics"
                    }
                ]
            }
        },
        "V3PubRoute": {
            "Type": "AWS::EC2::Route",
            "DependsOn": "V3PubRouteTable",
            "Properties": {
                "RouteTableId": {
                    "Ref": "V3PubRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "V3IGW"
                }
            }
        },
        "V3Pub1RouteTableAssoc": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "V3Pub1"
                },
                "RouteTableId": {
                    "Ref": "V3PubRouteTable"
                }
            }
        },
        "V3Pub2RouteTableAssoc": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "V3Pub2"
                },
                "RouteTableId": {
                    "Ref": "V3PubRouteTable"
                }
            }
        },
        "V3PubNACL": {
            "Type": "AWS::EC2::NetworkAcl",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC3"
                },
                "Tags": [
                    {
                        "Key": "Company",
                        "Value": "Globomantics"
                    }
                ]
            }
        },
        "V3PubNACLEgress": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "V3PubNACL"
                },
                "RuleNumber": "100",
                "Protocol": "-1",
                "RuleAction": "allow",
                "Egress": "true",
                "CidrBlock": "0.0.0.0/0"
            }
        },
        "V3PubNACLIngress": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "V3PubNACL"
                },
                "RuleNumber": "100",
                "Protocol": "-1",
                "RuleAction": "allow",
                "Egress": "false",
                "CidrBlock": "0.0.0.0/0"
            }
        },
        "V3Pub1NACLAssoc": {
            "Type": "AWS::EC2::SubnetNetworkAclAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "V3Pub1"
                },
                "NetworkAclId": {
                    "Ref": "V3PubNACL"
                }
            }
        },
        "V3Pub2NACLAssoc": {
            "Type": "AWS::EC2::SubnetNetworkAclAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "V3Pub2"
                },
                "NetworkAclId": {
                    "Ref": "V3PubNACL"
                }
            }
        }
    },
    "Outputs": {
        "VPCId": {
            "Description": "VPCId of the newly created VPC",
            "Value": {
                "Ref": "VPC1"
            }
        }
    }
}
